[REFACTOR] Refactor some code with maintainability issues